<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Tasks" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="Categories" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/nav_notifications" />

    <item
        android:id="@+id/nav_account"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_account" />

</menu>